# microservices

./: .gitignore  .gitmodules  README.md  pyproject.toml  test.py
pkg/mod/cache/download/golang.org/x/tools/gopls/@v/: v0.12.0.info
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.11.0  gopls@v0.12.0
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x069/: 137
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x069/019.p/: 25
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x069/160.p/: 146
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/269.p/: 155
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/270.p/: 40
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/2/001.p/: 13
pkg/sumdb/sum.golang.org/: latest
src/dataformats/jsonschema/: custom_types.py  dereference.py  draft_4.py  format.py  instance_model.py  json_pointer.py  metaschema_urls.py  model.py  protocols.py  validations.py  wip.py
src/dataformats/jsonschema/mixins/: dereference_mixin.py  json_pointer_schema_regex.py  model_fields_mixin.py  schema_parsing.py  validations_mixin.py
tests/: conftest.py  test_deference.py  test_json_pointer.py  test_model.py  test_schema_parsing.py  test_schema_pointers.py  test_validate.py  test_with_suite.py
